--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/11fdfa43c5.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
